Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7919

Buffer overflow in mount_lustre: parse_ldd(),append_option()

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Major Major
    • Lustre 2.9.0
    • Lustre 2.8.0
    • 3
    • 9223372036854775807

      buffer overflow in mount_lustre: parse_ldd(),append_option()

      Reproduction Steps:
      ================
      [root@dev-1 tests]# sh llmount.sh
      [root@dev-1 tests]# rm -f /tmp/A2000; for x in $(seq 1 4000); do echo -n A >> /tmp/A2000 ; done
      [root@dev-1 tests]# umount /mnt/mds1
      [root@dev-1 tests]# losetup /dev/loop0 /tmp/lustre-mdt1
      [root@dev-1 tests]# mount -t lustre /dev/loop0 /mnt/mds1 -o option4kplus=$(cat /tmp/A2000 )

      failure logs:
      =========

      [root@dev-1 tests]# mount -t lustre /dev/loop0 /mnt/mds1 -o option4kplus=$(cat /tmp/A2000 )
      mount.lustre: mount /dev/loop0 at /mnt/mds1 failed: Invalid argument
      This may have multiple causes.
      Are the mount options correct?
      Check the syslog for more info.
      *** glibc detected *** /sbin/mount.lustre: free(): invalid next size (normal): 0x000000000234f050 ***
      ======= Backtrace: =========
      /lib64/libc.so.6[0x3bbc075e66]
      /lib64/libc.so.6[0x3bbc0789b3]
      /sbin/mount.lustre(main+0x411)[0x402f11]
      /lib64/libc.so.6(__libc_start_main+0xfd)[0x3bbc01ed5d]
      /sbin/mount.lustre[0x4024a9]
      
      

            wc-triage WC Triage
            lokesh.jaliminche Lokesh Nagappa Jaliminche (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            5 Start watching this issue

              Created:
              Updated:
              Resolved: